--- a/CarFree Front/src/index.css
+++ b/CarFree Front/src/index.css
@@ -24,20 +24,12 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
-button {
+.btn {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -46,19 +38,31 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: all 0.25s;
 }
-button:hover {
+
+.btn-disabled {
+  border-radius: 8px;
+  border: 1px solid #1a1a1a;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #4b4b4b;
+  transition: all 0.25s;
+}
+
+.btn:hover {
   border-color: #646cff;
 }
-button:active {
+.btn:active {
   border-top-color: #115cfb;
   border-right-color: #115cfb;
   border-bottom-color: #1728fc;
   border-left-color: #1728fc;
 }
-button:focus,
-button:focus-visible {
+.btn:focus,
+.btn:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
